@@ -6,7 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.86.00
 
-              Add 'pamhue'.
+              Add pambrighten.
+
+              Add pamhue.
 
               pamenlarge: Add -scale, -xscale, -yscale .
 
